--- a/hitmeup_backend/src/main/resources/application.yml
+++ b/hitmeup_backend/src/main/resources/application.yml
@@ -1,1 +1,28 @@
-spring.application.name=Hit Me Up
+spring:
+  application:
+    name: Hit Me Up
+  
+  # Redis
+  redis:
+    host: localhost
+    port: 6379
+    # password: "" // .env
+    # database: 0
+
+# ??
+server:
+  port: 8080
+  servlet:
+    context-path: /
+
+app:
+  domain: http://localhost:8080
+  visitor:
+    default-count: 0
+
+logging:
+  level:
+    root: INFO
+    com:
+      hitmeup:
+        backend: DEBUG
