--- a/hitmeup_backend/src/main/resources/application.yml
+++ b/hitmeup_backend/src/main/resources/application.yml
@@ -3,11 +3,14 @@ spring:
     name: Hit Me Up
   
   # Redis
-  redis:
-    host: localhost
-    port: 6379
-    # password: "" // .env
-    # database: 0
+  data:
+    redis:
+      host: localhost
+      port: 6379
+      # password: "" // .env
+      # database: 0
+      repositories:
+        enabled: true
 
 # ??
 server:
