--- a/hitmeup_backend/src/main/resources/application-test.yml
+++ b/hitmeup_backend/src/main/resources/application-test.yml
@@ -1,10 +1,10 @@
 spring:
   data:
-    redis:
-      host: localhost
-      port: 6379
-      repositories:
-        enabled: true
+#    redis:
+#      host: localhost
+#      port: 6379
+#      repositories:
+#        enabled: true
 
 app:
   domain: http://localhost:8080
