--- a/.gitignore
+++ b/.gitignore
@@ -215,4 +215,7 @@ gradle-app.setting
 # Java heap dump
 *.hprof
 
+### secret-key
+firebase-service-account.json
+
 # End of https://www.toptal.com/developers/gitignore/api/java,kotlin,intellij,macos,gradle
