--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -13,13 +13,13 @@ steps:
     args:
       - 'run'
       - 'deploy'
-      - 'hitmeup'
+      - 'hitmeup-backend'
       - '--image=gcr.io/$PROJECT_ID/hitmeup:$COMMIT_SHA'
       - '--region=asia-northeast3'
       - '--platform=managed'
       - '--allow-unauthenticated'
       - '--set-env-vars=SPRING_PROFILES_ACTIVE=prod'
-      - '--set-secrets=/app/src/main/resources/firebase-service-account.json=firebase-service-account:latest'
+      - '--set-secrets=FIREBASE_CONFIG=firebase-service-account:latest'
       - '--timeout=180s'  # 시작 타임아웃 늘리기
 
 images:
